fixtures/valid/check-translation/input.js
translator.trans('Some key');
translator.trans('Other key');
translator.trans('Next key');

