fixtures/invalid/transform-wrong-number-of-args/input.js
translator.trans();
translator.trans(1, 2, 3, 4, 5);
